Error in writing fixed and paragraph width aligned with heading

--- a/src/components/Home/HowItWorks/HowItWorks.module.css
+++ b/src/components/Home/HowItWorks/HowItWorks.module.css
@@ -41,24 +41,35 @@
 
 .how_left {
   flex-basis: 48%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.how_left h3 {
+.how_left div {
+  width: fit-content;
+  text-align: center;
+  width: calc(min(430px, 100%));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.how_left div h3 {
   font-size: 44px;
   font-weight: 500;
 }
 
-.how_left h1 {
+.how_left div h1 {
   font-size: 50px;
   font-weight: 600;
   text-transform: uppercase;
 }
 
-.how_left p {
+.how_left div p {
   text-align: justify;
   margin-top: 3%;
   font-size: 20px;
-  max-width: 75%;
 }
 
 .how_right {
